force-app/main/default/objects/Agentforce_Topics_Config__mdt/Agentforce_Topics_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Agentforce Topics self-learning and feedback analysis</description>
    <label>Agentforce Topics Config</label>
    <pluralLabel>Agentforce Topics Configs</pluralLabel>
</CustomObject>