force-app/main/default/objects/Agentforce_Topics_Config__mdt/fields/Admin_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Profile_Name__c</fullName>
    <description>Profile name used to identify admins for report email recipients</description>
    <label>Admin Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>