force-app/main/default/objects/Agentforce_Topics_Config__mdt/fields/Analysis_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the automated feedback analysis scheduler is enabled</description>
    <label>Analysis Enabled</label>
    <type>Checkbox</type>
</CustomField>