force-app/main/default/objects/Agentforce_Topics_Config__mdt/fields/Analysis_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Frequency__c</fullName>
    <description>How often to run feedback analysis (Daily or Weekly)</description>
    <label>Analysis Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>