force-app/main/default/objects/Agentforce_Topics_Config__mdt/fields/Min_Feedback_Count__c.field-meta.xml
<CustomField>
    <fullName>Min_Feedback_Count__c</fullName>
    <description>Minimum number of unanalyzed negative feedbacks required before running analysis</description>
    <label>Min Feedback Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>